# Server

./: .env.example  .gitignore  README.md  dev.ps1  docker-compose.yml  livekit.yaml  phaselink.yaml
caddy/: Caddyfile  Caddyfile.tls
livekit/: Cargo.toml  Dockerfile
livekit/src/: config.rs  error.rs  main.rs  middleware.rs  rooms.rs  routes.rs  token.rs
phaselink/: Cargo.toml  Dockerfile  README.md  codebase.md
phaselink/src/: auth.rs  bots.rs  cache.rs  categories.rs  channels.rs  config.rs  error.rs  files.rs  invites.rs  main.rs  members.rs  messages.rs  openapi.rs  permissions.rs  pubsub.rs  rate_limit.rs  read_state.rs  roles.rs  server_settings.rs  tests.rs  voice.rs  ws.rs
zvoice/: Cargo.toml  Dockerfile
zvoice/src/: auth.rs  main.rs  ws.rs
