[package]
name = "livekit-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# LiveKit server SDK (token generation + room management)
livekit-api = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT (LiveKit tokens are JWTs)
jsonwebtoken = "9"

# Config / env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client (for LiveKit server API calls)
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.6"

# URL parsing for CORS origin extraction
url = "2"
