[package]
name = "zeeble-server"
version = "0.1.0"
edition = "2024"
description = "Zeeble chat server — host this to run your own Zeeble node"

[dependencies]
axum          = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio         = { version = "1",   features = ["full"] }
rusqlite      = { version = "0.31", features = ["bundled"] }
tower-http    = { version = "0.5", features = ["cors", "compression-gzip", "set-header"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
base64        = "0.21"
ed25519-dalek = "1"
jsonwebtoken  = "9"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy       = "0.15"
local-ip-address = "0.5"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
multer = "3"
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
anyhow = "1"
notify = "6"
tokio-tungstenite = "0.21"
futures-util = "0.3"
utoipa = { version = "5.3", features = ["axum_extras", "macros"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

[dev-dependencies]
axum-test = "18.7.0"
rand = "0.8"

