[package]
name = "zvoice"
version = "0.1.0"
edition = "2024"
description = "Zeeble voice/stream service — handles Opus-over-WebSocket voice and screen-share streams"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["cors"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
base64        = "0.21"
ed25519-dalek = "1"
jsonwebtoken  = "9"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy       = "0.15"
redis         = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
reqwest       = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow        = "1"
futures-util  = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
